typescript/checker/tests/conformance/parser/ecmascript5/Expressions/parserObjectCreation2.ts.stderr
error: UndefinedSymbol {
    sym: Atom('Foo' type=inline),
    span: Span {
        lo: BytePos(
            8,
        ),
        hi: BytePos(
            11,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Expressions/parserObjectCreation2.ts:1:9
  |
1 | new new Foo()()
  |         ^^^

